--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
     </div>
 
-    <div id="greetings" class="opacityReveal">
+    <section id="greetings" class="opacityReveal">
         <div class="rightBox">
             <h5>Ein herzliches Hallo!</h5>
             <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
@@ -203,7 +203,7 @@
         <div class="rightBox">
             <img src="src/frontDoor.JPG" width="100%">
         </div>
-    </div>
+    </section>
 
     <section class="praxis">
         <div class="praxisInner">
