--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="testSectionCss.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="desktop.css">
     <link rel="stylesheet" href="animations.css">
-    <link rel="stylesheet" href="testSectionCss.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -213,16 +213,16 @@
                     <div class="titleSubtitle">
                         <h5>Die Praxis</h5>
                     </div>
-                    <p>Meine Praxis in Bolanden ist das Zentrum meiner Arbeit.</p>
-                    <p>Aber auch darüber hinaus sehe ich mich als Wegbegleiter.</p>
-                    <p>So durfte ich bereits bei mehreren Turnieren und Wettkämpfen hautnah dabei sein und meine Patienten dabei unterstützen das Beste aus sich herauszuholen. </p>
+                    <p>Meine Praxis in Bolanden ist das Zentrum meiner Arbeit.<br>
+                        Aber auch darüber hinaus sehe ich mich als Wegbegleiter.<br>
+                        So durfte ich bereits bei mehreren Turnieren und Wettkämpfen hautnah dabei sein und meine Patienten dabei unterstützen das Beste aus sich herauszuholen. </p>
 
-                    <div class="adresse">
+                    <!-- <div class="adresse">
                         <img class="icono" src="src/location.png" width="100%">
                         <p>Bolandern-Weierhof</p>
 
 
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="right-container fromBottomWrapper">
@@ -230,7 +230,7 @@
             <div class="imgBoxo toTheSide"><img src="src/praxis2.JPG"></div>
             <div class="imgBoxo"><img src="src/praxis3.JPG"></div>-->
                 <!--<img src="src/praxis1.JPG">-->
-                <div class="parent">
+                <div class="praxisGridWrapper">
                     <div class="praxisGridItem1">
                         <div class="gridItemOverlay"></div>
                         <img src="src/praxis1.JPG" height="100%">
