--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
     </div>
 
     <section id="greetings" class="opacityReveal">
-        <div class="rightBox">
+        <div class="box">
             <h5>Ein herzliches Hallo!</h5>
-            <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.</p><br>
-            <p>Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.</p>
-            <p>Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.</p><br>
-            <p>Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
+            <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.<br>
+                Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.
+                Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.<br>
+                Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
         </div>
-        <div class="rightBox">
-            <img src="src/frontDoor.JPG" width="100%">
+        <div class="box">
+            <div><img src="src/frontDoor.JPG" width="100%"></div>
         </div>
     </section>
 
@@ -244,6 +244,14 @@
                         <img src="src/praxis3.JPG" height="100%">
                     </div>
                 </div>
+                <div class="carousel-wrapper">
+                    <div class="image-carousel">
+                        <img src="src/praxis1.JPG" alt="Bild 1">
+                        <img src="src/praxis1.JPG" alt="Bild 2">
+                        <img src="src/praxis1.JPG" alt="Bild 3">
+                    </div>
+                </div>
+
 
             </div>
         </div>
@@ -331,7 +339,10 @@
                                 <h3><i>Vielseitige<br>
                                         Therapieverfahren</i></h3>
                             </div>
-                            <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
+                            <p>• Physiotherapie<br>
+                                • manueller Therapie<br>
+                                • Lymphdrainage<br>
+                                • neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                         </div>
                     </div>
                     <div class="newLeistungen-card cardDown">
@@ -341,15 +352,18 @@
                                 <div class="iconi">
                                     <img src="src/running.png">
                                 </div>
-                                <h3><i>Professionelle<br>
+                                <h3><i>Coaching und<br>
                                         Fitnessberatung</i></h3>
                             </div>
-                            <p>• Erstellung von Fitnessplänen<br>
+                            <p>• Erstellung von Fitnessplänen
                                 • gemeinsames Training<br>
-                                • Personal Training<br></p>
+                                • Personal Training<br>
+                                • Effektives Coaching im Bereich Schmerzpsychologie und Wahrnehmung</p>
                         </div>
                     </div>
-                    <div class="newLeistungen-card cardUp">
+
+
+                    <!-- <div class="newLeistungen-card cardUp">
                         <img src="src/anatomie.JPG">
                         <div class="newLeistungen-cardText">
                             <div class="newLeistungen-cardTextHeadline">
@@ -364,25 +378,115 @@
                     </div>
 
                     <div class="newLeistungen-card cardDown">
-                        <img src="src/frederikEditLowQ.jpg">
-                        <div class="newLeistungen-cardText">
-                            <div class="newLeistungen-cardTextHeadline">
+                    <img src="src/frederikEditLowQ.jpg">
+                    <div class="newLeistungen-cardText">
+                        <div class="newLeistungen-cardTextHeadline">
 
-                                <div class="iconi">
+                            <div class="iconi">
 
-                                </div>
-                                <h3><i>Effektives<br>
-                                        Coaching</i></h3>
                             </div>
-                            <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
-
+                            <h3><i>Effektives<br>
+                                    Coaching</i></h3>
                         </div>
+                        <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
+
                     </div>
+                </div> -->
                 </div>
 
             </div>
         </div>
     </section>
+
+
+    <section id="" class="dark">
+        <div class="innerSection">
+            <div class="box">
+                <h5>Ganzheitlich & Individuell</h5>
+                <p>Vielseitige Therapieverfahren, Effektives Coaching und Fitnessberatung bilden die Basis meiner Arbeit. Darauf aufbauend erstelle ich ein individuelles Behandlungskonzept, das sich speziell nach Ihren Bedürfnissen richtet. </p>
+                <button>Mehr erfahren!</button>
+            </div>
+            <div class="box cardBox">
+                <div class="newLeistungen-card cardUp">
+                    <img src="src/behandlung.jpg">
+                    <div class="newLeistungen-cardText">
+                        <div class="newLeistungen-cardTextHeadline">
+                            <div class="iconi">
+                                <img src="/Users/renebohn/Documents/Projekte/Frederik Weber Physio Design/phone.png">
+                            </div>
+                            <h3><i>Vielseitige<br>
+                                    Therapieverfahren</i></h3>
+                        </div>
+                        <p>• Physiotherapie<br>
+                            • manueller Therapie<br>
+                            • Lymphdrainage<br>
+                            • neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
+                    </div>
+                </div>
+                <div class="newLeistungen-card cardDown">
+                    <img src="src/training2.jpg">
+                    <div class="newLeistungen-cardText">
+                        <div class="newLeistungen-cardTextHeadline">
+                            <div class="iconi">
+                                <img src="src/running.png">
+                            </div>
+                            <h3><i>Coaching und<br>
+                                    Fitnessberatung</i></h3>
+                        </div>
+                        <p>• Erstellung von Fitnessplänen
+                            • gemeinsames Training<br>
+                            • Personal Training<br>
+                            • Effektives Coaching im Bereich Schmerzpsychologie und Wahrnehmung</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="regional">
+        <div class="innerSection">
+            <div class="box">
+                <img class="firstImg" src="src/HHG.png" width="30%">
+                <img class="secondImg" src="src/teamKL.jpg" width="50%">
+            </div>
+            <div class="box">
+                <h5>Regional<br>verbunden</h5>
+                <p>Ich folge einem inneren Antrieb, einen
+                    nachhaltigen Mehrwert zu bieten. Nicht nur für
+                    meine Patienten, sondern auch für die Region.
+                    Mein Engagement in Vereinen und öffentlichen
+                    Einrichtungen ist für mich ein wahres
+                    Herzensprojekt.
+                    In Form eines Netzwerkes pflege ich darüber
+                    hinaus stetigen Austausch mit meiner
+                    Berufsgruppe im regionalen Raum.</p>
+                <button>Mehr erfahren!</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="personal" class="dark">
+        <div class="innerSection">
+            <div class="box">
+                <h5>Persönlich & empathisch</h5>
+                <p>Eine Krankheitsgeschichte will erzählt
+                    werden und ich höre Ihnen zu. Hierfür
+                    möchte ich mir Zeit nehmen, denn jeder ist
+                    ein Individuum und sollte daher auch eine
+                    individuelle Behandlung erhalten.
+                    Kontaktieren Sie mich gerne zur
+                    Vereinbarung eines Termins.</p>
+                <button>Kontakt</button>
+            </div>
+            <div class="box">
+                <img src="src/anatomie.jpg" alt="" width="350px" height="220px">
+                <img src="src/IMG_3880.webp" alt="" width="350px" height="220px">
+            </div>
+        </div>
+    </section>
+
+
     <section id="firstSection">
         <div class="firstSection-overlay"></div>
         <div class="firstSection_inner">
@@ -555,7 +659,7 @@
         </div>
     </section>
 
-    <section id="contactWrapper">
+    <!-- <section id="contactWrapper">
         <div id="contact">
             <div class="contactHeadline">
             </div>
@@ -639,7 +743,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <div id="physioHelpsWrapper" class="opacityReveal">
@@ -662,7 +766,7 @@
 
 
 
-    <section id="footer">
+    <div id="footer">
         <div class="footerAbsoluteBG"></div>
         <div class="footer_inner">
             <div class="footerBox">
@@ -676,7 +780,7 @@
 
             </div>
             <div class="footerBox">
-                <div class="footerHeadline">Frederik Weber</div>
+                <div class="footerHeadline">Kontakt</div>
                 <!--<div class="footerHeadline">Telefon</div>
                     <div class="footerText"><i class="fa-solid fa-phone-volume"></i>06352 7190327</div>
                     <div class="footerText"><i class="fa-solid fa-mobile-screen"></i>01575 4365617</div>
@@ -699,7 +803,7 @@
                 </div>-->
         </div>
 
-    </section>
+    </div>
     <div class="backToTop"><i class="fa-solid fa-angle-up"></i></div>
 
     <script>
@@ -721,6 +825,34 @@
         changeDots();
 
     </script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const track = document.querySelector(".image-carousel");
+            const images = track.querySelectorAll("img");
+            let index = 0;
+
+            function nextImage() {
+                if (window.innerWidth < 768) {
+                    index = (index + 1) % images.length;
+                    track.style.transform = `translateX(-${index * 100}%)`;
+                } else {
+                    track.style.transform = "none";
+                }
+            }
+
+            setInterval(nextImage, 3000);
+
+            window.addEventListener("resize", () => {
+                if (window.innerWidth >= 768) {
+                    track.style.transform = "none";
+                }
+            });
+        });
+
+    </script>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="script.js"></script>
