--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
     <section id="regional">
         <div class="innerSection">
             <div class="box">
-                <img class="firstImg" src="src/HHG.png" width="30%">
-                <img class="secondImg" src="src/teamKL.jpg" width="50%">
+                <img class="firstImg cardLeft" src="src/HHG.png">
+                <img class="secondImg cardRight" src="src/teamKL.jpg">
             </div>
             <div class="box">
                 <h5>Regional<br>verbunden</h5>
@@ -480,8 +480,8 @@
                 <button>Kontakt</button>
             </div>
             <div class="box">
-                <img src="src/anatomie.jpg" alt="" width="350px" height="220px">
-                <img src="src/IMG_3880.webp" alt="" width="350px" height="220px">
+                <img src="src/anatomie.jpg" alt="" class="cardLeft" width="350px" height="220px">
+                <img src="src/IMG_3880.webp" alt="" class="cardRight" width="350px" height="220px">
             </div>
         </div>
     </section>
