--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 </head>
 
 <body>
+
+
+
+    <button id="scrollToTop">
+        <svg class="progress-ring" width="50" height="50">
+            <circle class="progress-ring__circle" stroke="currentColor" stroke-width="4" fill="transparent" r="22" cx="25" cy="25" />
+        </svg>
+        <span class="arrow">↑</span>
+    </button>
+
+
+
     <div class="loader-wrapper">
         <div class="loadImageWrapper">
             <div class="blueDots">
