--- a/index.html
+++ b/index.html
@@ -51,18 +51,12 @@
 </head>
 
 <body>
-
-
-
     <button id="scrollToTop">
         <svg class="progress-ring" width="50" height="50">
             <circle class="progress-ring__circle" stroke="currentColor" stroke-width="4" fill="transparent" r="22" cx="25" cy="25" />
         </svg>
         <span class="arrow">↑</span>
     </button>
-
-
-
     <div class="loader-wrapper">
         <div class="loadImageWrapper">
             <div class="blueDots">
@@ -81,9 +75,6 @@
             <img class="loadImage" src="src/loading-logo.png" height="150px">
         </div>
         <div class="line-wobble"></div>
-
-
-
     </div>
 
     <div class="overlay">
@@ -155,7 +146,7 @@
                 </div>-->
                 <div id="header-left">
                     <div class="imgBox">
-                        <img src="src/IMG_3825.JPG">
+                        <img src="src/hero_img.webp">
                         <!--<img src="../../Gemini_Generated_Image_2lzy5c2lzy5c2lzy.png">-->
                         <div class="darkCircle"></div>
                         <div class="brightCircle"></div>
@@ -207,9 +198,9 @@
     <section id="greetings" class="opacityReveal">
         <div class="box">
             <h5>Ein herzliches Hallo!</h5>
-            <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.<br>
+            <p>Ich bin Frederik Weber und heiße Sie Willkommen zu meinem Onlineauftritt.<br><br>
                 Als Physiotherapeut und empathischer Mensch schätze ich vor allem den persönlichen Kontakt, möchte im wahrsten Sinne des Wortes in "Verbindung" treten.
-                Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.<br>
+                Meine Webseite bietet mir zusätzlich die Möglichkeit auf virtuelle Weise mit Ihnen in Kontakt zu treten und Ihnen so einen kleinen Einblick in meine Praxis zu geben.<br><br>
                 Vom Kleinkind, über den Profisportler bis hin zum Senior durfte ich bereits viele Menschen auf ihrem Weg zu einer verbesserten Lebensqualität begleiten. Gerne begleite ich auch Sie bei Ihrem persönlichen Anliegen.</p>
         </div>
         <div class="box">
@@ -342,7 +333,7 @@
             <div class="newLeistungenRight">
                 <div class="leistungenRightGrid">
                     <div class="newLeistungen-card cardUp">
-                        <img src="src/behandlung.jpg">
+                        <img src="src/behandlung_img.webp">
                         <div class="newLeistungen-cardText">
                             <div class="newLeistungen-cardTextHeadline">
                                 <div class="iconi">
@@ -411,14 +402,14 @@
     </section>
 
 
-    <section id="" class="dark">
+    <section id="" class="dark opacityReveal">
         <div class="innerSection">
             <div class="box">
                 <h5>Ganzheitlich & Individuell</h5>
                 <p>Vielseitige Therapieverfahren, Effektives Coaching und Fitnessberatung bilden die Basis meiner Arbeit. Darauf aufbauend erstelle ich ein individuelles Behandlungskonzept, das sich speziell nach Ihren Bedürfnissen richtet. </p>
                 <button>Mehr erfahren!</button>
             </div>
-            <div class="box cardBox">
+            <div class="box cardBox moveBox exception">
                 <div class="newLeistungen-card cardUp">
                     <img src="src/behandlung.jpg">
                     <div class="newLeistungen-cardText">
@@ -456,9 +447,9 @@
     </section>
 
 
-    <section id="regional">
+    <section id="regional" class="opacityReveal">
         <div class="innerSection">
-            <div class="box">
+            <div class="box cardBox moveBox">
                 <img class="firstImg cardLeft" src="src/HHG.png">
                 <img class="secondImg cardRight" src="src/teamKL.jpg">
             </div>
@@ -491,9 +482,9 @@
                     Vereinbarung eines Termins.</p>
                 <button>Kontakt</button>
             </div>
-            <div class="box">
-                <img src="src/anatomie.jpg" alt="" class="cardLeft" width="350px" height="220px">
-                <img src="src/IMG_3880.webp" alt="" class="cardRight" width="350px" height="220px">
+            <div class="box moveBox">
+                <img src="src/anatomie.jpg" alt="" class="cardLeft" width="420px" height="180px">
+                <img src="src/IMG_3880.webp" alt="" class="cardRight" width="420px" height="180px">
             </div>
         </div>
     </section>
