--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="overlayNavigation overlayAnimation">
                 <a class="overlayNavigation-item">Home</a>
-                <a class="overlayNavigation-item">Anwendungen</a>
+                <a class="overlayNavigation-item" href="anwendungsgebiete.html">Anwendungen</a>
                 <a class="overlayNavigation-item">Über</a>
                 <a class="overlayNavigation-item">Netzwerk</a>
                 <a class="overlayNavigation-item">Kontakt</a>
@@ -118,7 +118,7 @@
                     </div>
                     <div id="navigationBar_menu">
                         <div id="navigationBar_menuItem">Home</div>
-                        <div id="navigationBar_menuItem">Anwendungen</div>
+                        <div id="navigationBar_menuItem"><a href="anwendungsgebiete.html">Anwendungen</a></div>
                         <div id="navigationBar_menuItem">Über</div>
                         <div id="navigationBar_menuItem">Netzwerk</div>
                         <div id="navigationBar_menuItem">Kontakt</div>
@@ -160,15 +160,13 @@
                 <div id="header-right">
                     <div id="header_headlineWrapper" class="fromBottomWrapper">
                         <div class="titleSubtitle">
-                            <h1>Frederik Weber</h1>
+                            <h1 class="bold">Frederik Weber</h1>
                             <div class="subTitle">
                                 <div class="line"></div>
                                 <p>Heilpraktiker für Physiotherapie </p>
                             </div>
                         </div>
                         <p class="quote">„In der Liebe zum Ganzen tritt das Individuelle in Erscheinung.“ – Krishnamurti</p>
-                        <button>mehr erfahren</button>
-
 
                         <div class="headerItemWrapper">
                             <div class="headerItem">
@@ -482,10 +480,20 @@
                     Vereinbarung eines Termins.</p>
                 <button>Kontakt</button>
             </div>
-            <div class="box moveBox">
+
+
+            <div class="newBox moveBox">
+                <div class="newBox_first cardLeft">
+                    <img src="src/anatomie.jpg" alt="" width="100%" height="100%">
+                </div>
+                <div class="newBox_second cardRight">
+                    <img src="src/IMG_3880.webp" alt="" width="100%" height="100%">
+                </div>
+            </div>
+            <!--<div class="box moveBox">
                 <img src="src/anatomie.jpg" alt="" class="cardLeft" width="420px" height="180px">
                 <img src="src/IMG_3880.webp" alt="" class="cardRight" width="420px" height="180px">
-            </div>
+            </div> -->
         </div>
     </section>
 
