--- a/anwendungsgebiete.html
+++ b/anwendungsgebiete.html
@@ -147,7 +147,8 @@
                 <div class="showcaseImgBox">
                     <!--<img src="/Users/renebohn/Library/CloudStorage/Dropbox/Webseite_Frederik_Weber/Fotos Frederik/IMG-20240130-WA0004.jpg" alt="">-->
                     <!--<img src="/Users/renebohn/Library/CloudStorage/Dropbox/Webseite_Frederik_Weber/Website/src/training.jpg">-->
-                    <img src="/Users/renebohn/Library/CloudStorage/Dropbox/Webseite_Frederik_Weber/Website/src/training1-0.75.webp" alt="">
+                    <!--<img src="/Users/renebohn/Library/CloudStorage/Dropbox/Webseite_Frederik_Weber/Website/src/training1-0.75.webp" alt="">-->
+                    <img src="src/training1-0.75.webp" alt="">
                 </div>
             </div>
         </div>
