--- a/anwendungsgebiete.html
+++ b/anwendungsgebiete.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <title>Praxis Weber</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="testSectionCss.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tablet.css">
@@ -16,13 +21,14 @@
 
 <body>
 
-
     <button id="scrollToTop">
         <svg class="progress-ring" width="50" height="50">
             <circle class="progress-ring__circle" stroke="currentColor" stroke-width="4" fill="transparent" r="22" cx="25" cy="25" />
         </svg>
         <span class="arrow">↑</span>
     </button>
+
+
     <div class="overlay">
         <div class="overlayInner">
             <div class="closeButton">
@@ -193,9 +199,6 @@
         </div>
 
     </div>
-    <div class="backToTop"><i class="fa-solid fa-angle-up"></i></div>
-
-
 
 
     <script>
@@ -249,6 +252,86 @@
         window.addEventListener("load", moveDownRevealFun);
 
     </script>
+    <script>
+        const scrollBtn = document.getElementById('scrollToTop');
+        const circle = scrollBtn.querySelector('.progress-ring__circle');
+        const radius = circle.r.baseVal.value;
+        const circumference = 2 * Math.PI * radius;
+
+        function setProgress(percent) {
+            const offset = circumference - (percent / 100) * circumference;
+            circle.style.strokeDashoffset = offset;
+        }
+
+        window.addEventListener('scroll', () => {
+            const scrollTop = window.scrollY;
+            const docHeight = document.documentElement.scrollHeight - window.innerHeight;
+            const scrollPercent = (scrollTop / docHeight) * 100;
+            setProgress(scrollPercent);
+
+            // Show button after scrolling down a bit
+            if (scrollTop > 200) {
+                scrollBtn.classList.add('show');
+            } else {
+                scrollBtn.classList.remove('show');
+            }
+        });
+
+        scrollBtn.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+
+    </script>
+
+    <script>
+        document.querySelector(".hamburgerMenu").onclick = function() {
+
+            document.querySelector(".overlay").classList.add("overlayShow");
+            document.getElementsByTagName("HTML")[0].style.overflow = "hidden";
+
+            for (var y = 0; y < document.querySelectorAll(".overlayAnimation").length; y++) {
+                for (var x = 0; x < document.querySelectorAll(".overlayAnimation")[y].children.length; x++) {
+                    //document.querySelectorAll(".overlayAnimation")[x].getElementsByTagName("*")[x].style.opacity = "1";
+                    //console.log(document.querySelectorAll(".overlayAnimation")[y].getElementsByTagName("*").length);
+
+                    document.querySelectorAll(".overlayAnimation")[y].children[x].classList.add("tro");
+                    //document.querySelectorAll(".overlayAnimation")[y].getElementsByTagName("*")[x].style.transition = "1s";
+                    document.querySelectorAll(".overlayAnimation")[y].children[x].style.transitionDelay = x / 4 + "s";
+
+                    //document.querySelectorAll(".overlayAnimation")[y].getElementsByTagName("*")[x].style.border = "solid 2px green";
+                    //console.log(document.querySelectorAll(".overlayAnimation")[y].getElementsByTagName("*").length);
+                }
+            }
+
+            for (var i = 0; i < document.querySelectorAll(".hamburgerMenuLine").length; i++) {
+                document.querySelectorAll(".hamburgerMenuLine")[i].style.margin = "28px";
+            }
+        }
+
+
+        document.querySelector(".closeButton").onclick = function() {
+            document.querySelector(".overlay").classList.remove("overlayShow");
+            document.getElementsByTagName("HTML")[0].style.overflow = "auto";
+
+            for (var y = 0; y < document.querySelectorAll(".overlayAnimation").length; y++) {
+                for (var x = 0; x < document.querySelectorAll(".overlayAnimation")[y].children.length; x++) {
+                    document.querySelectorAll(".overlayAnimation")[y].children[x].classList.remove("tro");
+                    document.querySelectorAll(".overlayAnimation")[y].children[x].style.transitionDelay = "0s";
+                }
+            }
+
+
+            for (var i = 0; i < document.querySelectorAll(".hamburgerMenuLine").length; i++) {
+                document.querySelectorAll(".hamburgerMenuLine")[i].style.margin = "4px auto";
+            }
+
+        }
+
+    </script>
+
 </body>
 
 </html>
