--- a/index.html
+++ b/index.html
@@ -484,7 +484,8 @@
 
             <div class="newBox moveBox">
                 <div class="newBox_first cardLeft">
-                    <img src="src/anatomie.jpg" alt="" width="100%" height="100%">
+                    <!--<img src="src/anatomie.jpg" alt="" width="100%" height="100%"-->
+                    <img src="src/IMG_3813_test.webp" alt="" width="100%" height="100%">
                 </div>
                 <div class="newBox_second cardRight">
                     <img src="src/IMG_3880.webp" alt="" width="100%" height="100%">
