--- a/indexNO.html
+++ b/indexNO.html
@@ -147,6 +147,8 @@
                 <div id="header-left">
                     <div class="imgBox">
                         <img src="src/hero_img.webp">
+                        <!-- <img src="/Users/renebohn/Documents/Projekte/Frederik Weber Physio Design/Gemini_Generated_Image_2lzy5c2lzy5c2lzy.png"> -->
+                        <!-- <img src='/Users/renebohn/Library/CloudStorage/Dropbox/Webseite_Frederik_Weber/Website/src/nicht benutzt/RadialOpacity.png'> -->
                         <!--<img src="../../Gemini_Generated_Image_2lzy5c2lzy5c2lzy.png">-->
                         <div class="darkCircle"></div>
                         <div class="brightCircle"></div>
@@ -485,7 +487,7 @@
             <div class="newBox moveBox">
                 <div class="newBox_first cardLeft">
                     <!--<img src="src/anatomie.jpg" alt="" width="100%" height="100%"-->
-                    <img src="src/IMG_3813_test.webp" alt="" width="100%" height="100%">
+                    <img src="src/anatomie.jpg" alt="">
                 </div>
                 <div class="newBox_second cardRight">
                     <img src="src/IMG_3880.webp" alt="" width="100%" height="100%">
