--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <p>Als besonders bereichernd empfinde ich die Begleitung von Schwangeren. Denn hier liegt der Ursprung des Lebens. Auch die Unterstützung von Babys und Kleinkindern liegt mir besonders am Herzen, da in dieser Lebensphase die wichtigsten motorischen Entwicklungen im Körper geschehen. Und so durfte ich mich in diesem Bereich immer mehr weiterbilden und mein Leistungsspektrum erweitern. </p>
             <div class="innerSection-flex">
                 <div class="showcaseImgBox">
-                    <img src="src/IMG_3903_.webp" alt="">
-                    <img src="src/IMG_3936_.webp" alt="">
+                    <img src="src/IMG_3903_.webp" width="50%" alt="">
+                    <img src="src/IMG_3936_.webp" width="50%" alt="">
                 </div>
                 <div class="innerSection-box">
                     <h2>Sanfte Behandlung von Schwangeren, Babys und Kleinkindern durch:</h2>
