--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 
         <div id="header-emptyTop"></div>
         <div id="header">
-
             <div class="navigationBar">
                 <div class="navigationBar_inner">
                     <div id="navigationBar_logo">
-                        <div id="logo">
+                        <img src="/Users/renebohn/Documents/Projekte/Frederik Weber Physio Design/Frame.svg">
+                        <!--<div id="logo">
                             <img src="src/logo.png" height="100%">
                         </div>
                         <div class="navigationBar_logoText">
                             <div class="navigationBar_logoTextItem1">Physiotherapie</div>
                             <div class="navigationBar_logoTextItem2">Praxis Weber</div>
-                        </div>
+                        </div>-->
                     </div>
                     <div id="navigationBar_menu">
                         <div id="navigationBar_menuItem">Home</div>
@@ -94,6 +94,11 @@
             <p class="lightText">- Johann Wolfgang von Goethe</p>
         </div>
     </section>
+
+
+
+
+
 
     <section>
         <div class="sectionInner">
