--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="navigationBar">
                 <div class="navigationBar_inner">
                     <div id="navigationBar_logo">
-                        <img src="/Users/renebohn/Documents/Projekte/Frederik Weber Physio Design/Frame.svg">
+                        <img src="./src/Frame.svg">
                         <!--<div id="logo">
                             <img src="src/logo.png" height="100%">
                         </div>
