--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/8fc67f8040.js" crossorigin="anonymous"></script>
+
 
     <link rel="stylesheet" href="testSectionCss.css">
     <link rel="stylesheet" href="style.css">
